[metadata]
# replace with your username:
name = example-pkg-MrPoisen
version = 0.0.2
author = Sebastian Drescher
author_email = author@example.com
description = A package desinged to make it easier to use Security functions
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Topic :: Security :: Cryptography
install_requires='pycryptodome'
[options]
packages = find:
python_requires = >=3.6