[metadata]
name = easy_cryptography
version = 0.0.5
author = MrPoisen
#author_email = author@example.com
description = A package designed to make it easier to use Security functions
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Topic :: Security :: Cryptography
install_requires='pycryptodome'
[options]
packages = find:
python_requires = >=3.6

[aliases]
test=pytest